# llvm-ir-dimostrazione

./: CMakeLists.txt  README.md
.github/workflows/: build-test-release.yml
src/: CMakeLists.txt  main.cc
src/codegen/: CMakeLists.txt  binary.cc  call.cc  for.cc  function.cc  if.cc  number.cc  prototype.cc  renderer.cc  renderer.h  unary.cc  variable.cc
src/parsing/: CMakeLists.txt  grammar.yy
